# File-Retrieval-System

./: README.md
Socket Programming/: README.md
Socket Programming/app-cpp/: CMakeLists.txt
Socket Programming/app-cpp/include/: ClientProcessingEngine.hpp  IndexStore.hpp  Protocol.hpp  ResultList.hpp  ServerProcessingEngine.hpp
Socket Programming/app-cpp/src/: ClientAppInterface.cpp  ClientProcessingEngine.cpp  DocFreqList.cpp  File.cpp  IndexStore.cpp  InvertedIndexMap.cpp  Protocol.cpp  ResultList.cpp  ServerAppInterface.cpp  ServerProcessingEngine.cpp  file-retrieval-benchmark.cpp  file-retrieval-server.cpp
ZeroMQ/: README.md
ZeroMQ/app-cpp/: CMakeLists.txt
ZeroMQ/app-cpp/include/: ClientProcessingEngine.hpp  Concurrency.hpp  IndexStore.hpp  InputHandler.hpp  InvertedIndexMap.hpp  Protocol.hpp  ServerProcessingEngine.hpp  StringList.hpp
ZeroMQ/app-cpp/src/: ClientAppInterface.cpp  ClientProcessingEngine.cpp  IndexStore.cpp  InputHandler.cpp  Protocol.cpp  ServerAppInterface.cpp  ServerProcessingEngine.cpp  file-retrieval-benchmark.cpp  file-retrieval-server.cpp
gRPC/: README.md
gRPC/app-cpp/: CMakeLists.txt  README.md
gRPC/app-cpp/include/: ClientAppInterface.hpp  ClientProcessingEngine.hpp  DocFreqList.hpp  File.hpp  FileRetrievalEngineImpl.hpp  IndexStore.hpp  InputHandler.hpp  ServerAppInterface.hpp  ServerProcessingEngine.hpp
gRPC/app-cpp/src/: ClientAppInterface.cpp  ClientProcessingEngine.cpp  FileRetrievalEngineImpl.cpp  IndexStore.cpp  InputHandler.cpp  ServerAppInterface.cpp  ServerProcessingEngine.cpp  StringList.cpp  file-retrieval-benchmark.cpp  file-retrieval-server.cpp
